--- a/trunk/src/ui/inplace_editor.ui
+++ b/trunk/src/ui/inplace_editor.ui
@@ -14,33 +14,19 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="0">
+   <item row="0" column="1">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="3" column="0" colspan="6">
+     <item row="1" column="0" colspan="7">
       <widget class="QLineEdit" name="name"/>
      </item>
-     <item row="2" column="5">
-      <widget class="QTimeEdit" name="endTime">
-       <property name="displayFormat">
-        <string>hh:mm:ss</string>
-       </property>
-       <property name="time">
-        <time>
-         <hour>0</hour>
-         <minute>0</minute>
-         <second>0</second>
-        </time>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0" colspan="3">
+     <item row="0" column="0" colspan="3">
       <widget class="QTimeEdit" name="startTime">
        <property name="displayFormat">
         <string>hh:mm:ss</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="3" colspan="3">
+     <item row="2" column="3">
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -53,7 +39,7 @@
        </property>
       </spacer>
      </item>
-     <item row="5" column="0">
+     <item row="2" column="0">
       <widget class="QPushButton" name="bold">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -84,7 +70,7 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="1">
+     <item row="2" column="1">
       <widget class="QPushButton" name="italics">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -117,7 +103,7 @@
        </property>
       </widget>
      </item>
-     <item row="5" column="2">
+     <item row="2" column="2">
       <widget class="QPushButton" name="underline">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -141,14 +127,14 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="0" colspan="4">
+     <item row="4" column="0" colspan="4">
       <widget class="QCheckBox" name="incomplete">
        <property name="text">
         <string>Mark transcript as incomplete</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
+     <item row="3" column="0">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -161,19 +147,77 @@
        </property>
       </spacer>
      </item>
-     <item row="7" column="5">
+     <item row="0" column="6">
+      <widget class="QTimeEdit" name="endTime">
+       <property name="displayFormat">
+        <string>hh:mm:ss</string>
+       </property>
+       <property name="time">
+        <time>
+         <hour>0</hour>
+         <minute>0</minute>
+         <second>0</second>
+        </time>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="5" colspan="2">
       <widget class="QPushButton" name="cancel">
        <property name="text">
         <string>Cancel</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="4">
+     <item row="4" column="4">
       <widget class="QPushButton" name="save">
        <property name="text">
         <string>Save</string>
        </property>
       </widget>
+     </item>
+     <item row="2" column="4" colspan="3">
+      <layout class="QGridLayout" name="gridLayout_4">
+       <item row="0" column="1">
+        <widget class="QPushButton" name="play">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>32</width>
+           <height>32</height>
+          </size>
+         </property>
+         <property name="layoutDirection">
+          <enum>Qt::LeftToRight</enum>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normalon>../pixmaps/play.png</normalon>
+          </iconset>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
