--- a/src/ui/transcribe.ui
+++ b/src/ui/transcribe.ui
@@ -65,7 +65,7 @@
       </widget>
       <widget class="QWidget" name="gridLayoutWidget">
        <layout class="QGridLayout" name="gridLayout">
-        <item row="0" column="0" colspan="3">
+        <item row="0" column="0" colspan="4">
          <widget class="QListView" name="table">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -88,17 +88,24 @@
           </property>
          </spacer>
         </item>
-        <item row="1" column="1">
+        <item row="1" column="2">
          <widget class="QPushButton" name="addButton">
           <property name="text">
            <string>+ Add</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="2">
+        <item row="1" column="3">
          <widget class="QPushButton" name="removeButton">
           <property name="text">
            <string>- Remove</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QPushButton" name="agendaItemButton">
+          <property name="text">
+           <string>Agenda Item</string>
           </property>
          </widget>
         </item>
